# heat

./: .gitignore  CMakeLists.txt  README.md  main.cpp
plot/: plot1D.py  plot2D.py  temp.txt  time.txt  xcor.txt
plot/data/: coordinates.txt  temp.txt
src/: heat.h  linalg.h
